2000-08-01 Brent Welch <welch@ajubasolutions.com>
	* tcl/unix/Makefile.in:
	* tk/unix/Makefile.in:
	Fixed bogus "test -f" on the new HELP_DIR directory, which should
	be "test -d".

2000-07-30 Brent Welch <welch@ajubasolutions.com>
	* win/Makefile.in - fixed because of new definition of
	TCL_SRC_DIR and TK_SRC_DIR

2000-07-12 Brent Welch <welch@ajubasolutions.com>
	* Changed the HELP_DIR to be configurable so I could have parallel
		builds not all trying to create the same help files.

2000-07-12 Brent Welch <welch@ajubasolutions.com>
	* tcl/win/configure.in, common.bc, common.vc
	    Fixed version number to 8.3
	* {tcl,tk}/unix/Makefile.in, tweaks to get references to LIB_RUNTIME_DIR
	    properly expanded on irix builds.  Also added BUILDHELP macro
	    that is conditional on nroff being present so we don't try to
	    build help files on systems with out nroff.

2000-07-10 Brent Welch <welch@ajubasolutions.com>
	* tcl/win/tclXAppInit.c, tk/generic/tkXshell.c, tk/win/tkXAppInit.c
	    - turn off USE_TCL_STUBS
	* win/Makefile.in, win/configure.in: Cleanup use of stubs library.

2000-04-03  Lee Bernhard  <lfb@scriptics.com>

	* tcl/win/tclXwinOS.c (TclXOSkill): Added support for "kill"
	command on Windows platforms.

1999-08-20  Scott Stanton  <stanton@scriptics.com>

	* win/aclocal.m4: Updated from latest tcl.m4.

	* win/Makefile.in: Various changes to support Windows builds.
	Fixed to properly generate pkgIndex.tcl for tkx.  Added
	Makefile/configure rules.
