@@ -1,3 +1,12 @@
+2001-05-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* tcl/generic/tclXgeneral.c (TclX_LoopObjCmd): Changed
+	  'Tcl_AppendStringsToObj' into 'Tcl_AddErrorInfo'. 
+
+	  Fixes bug [226388]. Associated patch is [403050]. No need to
+	  extend the testsuite, it already contained a test exercising the
+	  bug.
+
 2000-08-01 Brent Welch <welch@ajubasolutions.com>
 	* tcl/unix/Makefile.in:
 	* tk/unix/Makefile.in:
